--- a/src/main/java/de/andreasgiemza/mangamanager/MangaManager.form
+++ b/src/main/java/de/andreasgiemza/mangamanager/MangaManager.form
@@ -119,6 +119,10 @@
               <JTableSelectionModel selectionMode="0"/>
             </Property>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JTable(){&#xd;&#xa;    @Override&#xd;&#xa;    public Component prepareRenderer(TableCellRenderer renderer, int row, int column) {&#xd;&#xa;        Component component = super.prepareRenderer(renderer, row, column);&#xd;&#xa;        int rendererWidth = component.getPreferredSize().width;&#xd;&#xa;        TableColumn tableColumn = getColumnModel().getColumn(column);&#xd;&#xa;        tableColumn.setPreferredWidth(Math.max(rendererWidth + getIntercellSpacing().width, tableColumn.getPreferredWidth()));&#xd;&#xa;        return component;&#xd;&#xa;    }&#xd;&#xa;};"/>
+            <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="MangaManager_subscriptionsTable"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
